bk_ida/gobmkida/g1/segment_region
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/segment_region/src/engine/influence.c:1747:40: error: use of undeclared identifier 'marked_3'
number_of_regions = ( unsigned __int64)marked_3; 
                                       ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/segment_region/src/engine/influence.c:1748:30: error: use of undeclared identifier 'marked_3'
memset( marked_3, 0, sizeof( marked_3)); 
                             ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/segment_region/src/engine/influence.c:1748:9: error: use of undeclared identifier 'marked_3'
memset( marked_3, 0, sizeof( marked_3)); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/segment_region/src/engine/influence.c:1752:5: error: use of undeclared identifier 'marked_3'
&& !marked_3[i] 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/segment_region/src/engine/influence.c:1760:1: error: use of undeclared identifier 'marked_3'
marked_3[i] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/segment_region/src/engine/influence.c:1786:25: error: use of undeclared identifier 'marked_3'
if ( board[v7] != 3 && !marked_3[v7] && region_owner( q, v7) == color ) 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/segment_region/src/engine/influence.c:1789:1: error: use of undeclared identifier 'marked_3'
marked_3[v7] = 1; 
^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/segment_region/src/obj/1/influence.o] Error 1
